[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymira"
version = "0.1.0"
authors = [{ name="Your Name", email="your@email.com" }]
description = "A Python library for spatial graph analysis."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    # Add any other core dependencies
]

