[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pymira"
version = "0.1.0"
dependencies = [
  "dill>=0.4.0",
  "matplotlib>=3.10.9",
  "mayavi>=4.8.3",
  "nibabel>=5.4.2",
  "numba>=0.65.1",
  "numpy>=2.2.6",
  "open3d>=0.19.0",
  "opencv_contrib_python>=4.13.0.92",
  "pillow>=10.4.0",
  "pyvista>=0.48.1",
  "rasterio>=1.5.0",
  "scipy>=1.17.1",
  "shapely>=2.0.7",
  "scikit-image>=0.26.0",
  "tifffile>=2023.7.10",
  "tqdm>=4.67.3",
]

[tool.setuptools]
packages = ["pymira"]

[tool.setuptools.package-dir]
pymira = "."
